--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -28,27 +28,17 @@ set -g status "on"
 set -g status-justify "left"
 set -g status-left-length "100"
 set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g status-attr "none"
-set -g status-left-attr "none"
+set -g status-right-style "none"
+set -g status-left-style "none"
 
 # Gruvbox colors
 # set -g pane-border-fg "colour238"
 # set -g pane-active-border-fg "colour248"
 
-set -g status-bg "colour237"
 
-set -g message-fg "colour237"
-set -g message-bg "colour248"
-set -g message-command-fg "colour237"
-set -g message-command-bg "colour248"
+set -g message-command-style fg="colour237",bg="colour248"
 
-setw -g window-status-fg "colour237"
-setw -g window-status-bg "colour214"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour237"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour248"
+setw -g window-status-activity-style bg="colour237","none",fg="colour248"
 setw -g window-status-separator ""
 
 set -g status-left "#[fg=colour248,bg=colour241] #S #[fg=colour241,bg=colour237,nobold,nounderscore,noitalics]"
@@ -59,27 +49,22 @@ setw -g window-status-current-format "#[fg=colour237,bg=colour214,nobold,nounder
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style "none",bg="colour237",bg=colour235,fg=colour136,default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg="colour237",bg="colour214","none",fg=colour244,bg=default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-style fg=colour166,bg=default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour240
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style fg="colour237",bg="colour248",bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
