--- a/linked/.config/i3/config
+++ b/linked/.config/i3/config
@@ -178,6 +178,5 @@ client.urgent           #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.placeholder      #2f343f #2f343f #d8dee8 #2f343f #2f343f
 client.background       #2f343f
 
-
-# Start pulse audio
-#exec --no-startup-id "pulseaudio --start
+# Setting keyboard layout key and languages
+exec_always setxkbmap -layout us,ca -option grp:lctrl_lshift_toggle
