--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -51,46 +51,12 @@ setw -g window-status-activity-attr "none"
 setw -g window-status-activity-fg "colour248"
 setw -g window-status-separator ""
 
-set -g status-left "#[fg=colour248,bg=colour241] #S #[fg=colour241,bg=colour237,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour237,bg=colour248] #h "
+set -g status-left "#[fg=colour248,bg=colour241] Session #S "
+set -g status-right "#[fg=colour246,bg=colour239] %Y-%m-%d │ %H:%M #[fg=colour237,bg=colour248] #h "
 
-setw -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour250,bg=colour239] #I #[fg=colour250,bg=colour239] #W #[fg=colour239,bg=colour237,noitalics]"
-setw -g window-status-current-format "#[fg=colour237,bg=colour214,nobold,nounderscore,noitalics]#[fg=colour234,bg=colour214] #I #[fg=colour234,bg=colour214,nobold] #W #[fg=colour214,bg=colour237,nobold,nounderscore,noitalics]"
-#### COLOUR (Solarized 256)
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
+setw -g window-status-format "#[fg=colour250,bg=colour239] #I │#[fg=colour250,bg=colour239] #W "
+setw -g window-status-current-format "#[fg=colour234,bg=colour214] #I │#[fg=colour234,bg=colour214,nobold] #W "
 
 # bell
 set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
