Disabled airline and harmonized gruvbox colorscheme

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -24,17 +24,10 @@ bind r source-file ~/.tmux.conf
 # Don't rename windows automatically
 set-option -g allow-rename off
 
-set -g status "on"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g status-attr "none"
-set -g status-left-attr "none"
-
 # Gruvbox colors
-# set -g pane-border-fg "colour238"
-# set -g pane-active-border-fg "colour248"
+
+set -g status-right "#[fg=colour246,bg=colour239] %Y-%m-%d │ %H:%M #[fg=colour235,bg=colour245,bold] #h "
+set -g status-left "#[fg=colour235,bg=colour245,bold] tmux #S "
 
 set -g status-bg "colour237"
 
@@ -43,20 +36,14 @@ set -g message-bg "colour248"
 set -g message-command-fg "colour237"
 set -g message-command-bg "colour248"
 
-setw -g window-status-fg "colour237"
-setw -g window-status-bg "colour214"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour237"
-setw -g window-status-activity-attr "none"
+setw -g window-status-fg "colour246"
+setw -g window-status-bg "colour239"
+setw -g window-status-activity-bg "colour246"
 setw -g window-status-activity-fg "colour248"
-setw -g window-status-separator ""
+setw -g window-status-separator " "
 
-set -g status-left "#[fg=colour248,bg=colour241] Session #S "
-set -g status-right "#[fg=colour246,bg=colour239] %Y-%m-%d │ %H:%M #[fg=colour237,bg=colour248] #h "
-
-
-setw -g window-status-format "#[fg=colour250,bg=colour239] #I │#[fg=colour250,bg=colour239] #W "
-setw -g window-status-current-format "#[fg=colour234,bg=colour214] #I │#[fg=colour234,bg=colour214,nobold] #W "
+setw -g window-status-format " #I - #W "
+setw -g window-status-current-format "#[fg=colour234,bg=colour214] #I -#[fg=colour234,bg=colour214,nobold] #W "
 
 # bell
 set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
