--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -1,6 +1,3 @@
-# Enable 256-color terminal
-set -g default-terminal "screen-256color"
-
 # Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -13,16 +10,20 @@ unbind '"'
 unbind %
 
 # Vim navigation keys
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+set-window-option -g mode-keys vi
 
 # Reload config file
 bind r source-file ~/.tmux.conf
 
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
 # Don't rename windows automatically
 set-option -g allow-rename off
+
+# Enable 256-color terminal
+set -g default-terminal "screen-256color"
+
 
 # Gruvbox colors
 
@@ -45,5 +46,3 @@ setw -g window-status-separator " "
 setw -g window-status-format " #I - #W "
 setw -g window-status-current-format "#[fg=colour234,bg=colour214] #I -#[fg=colour234,bg=colour214,nobold] #W "
 
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
