Reverted good vim key settings

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -10,6 +10,10 @@ unbind '"'
 unbind %
 
 # Vim navigation keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 set-window-option -g mode-keys vi
 
 # Reload config file
