--- a/linked/.config/i3/config
+++ b/linked/.config/i3/config
@@ -3,7 +3,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:UbuntuMono Nerd Font 11
+font pango:UbuntuMono 13
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -23,7 +23,7 @@ bindsym XF86AudioMute exec pamixer -t
 bindsym $mod+Shift+q kill
 
 # Lock screen using i3lock
-bindsym $mod+Shift+p exec i3lock -c 333333
+bindsym $mod+Shift+p exec i3lock -c 222222
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
@@ -183,3 +183,8 @@ client.background       #2f343f
 
 # Setting keyboard layout key and languages
 exec_always setxkbmap -layout us,ca -option grp:win_space_toggle
+
+# Painting background
+exec_always --no-startup-id feh --randomize --bg-fill ~/Pictures/wallpapers/*
+# Composition manager for transparency
+exec xcompmgr -c -f -n
