--- a/linked/.config/i3/config
+++ b/linked/.config/i3/config
@@ -3,7 +3,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:UbuntuMono 13
+font pango:Source Code Pro 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -26,7 +26,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+p exec i3lock -c 222222
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -fn 'Sans 14'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -134,10 +134,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -184,10 +184,12 @@ client.background       #2f343f
 # Setting keyboard layout key and languages
 exec_always setxkbmap -layout us,ca -option grp:win_space_toggle
 
+# HiDpi monitor config
+exec --no-startup-id xrdb -merge ~/.Xressources
+
 # Painting background
 exec_always --no-startup-id feh --randomize --bg-fill ~/Pictures/wallpapers/*
 # Composition manager for transparency
-exec xcompmgr -c -f -n
+exec xcompmgr -c -n
 
-# HiDpi monitor config
-exec --no-startup-id xrdb -merge ~/.Xressources
+assign [instance="jami-qt"] 3
